@@ -7,9 +7,9 @@ S3method(print,glmGamPoi)
 S3method(print,summary.glmGamPoi)
 S3method(residuals,glmGamPoi)
 S3method(summary,glmGamPoi)
-export(gampoi_overdispersion_mle)
 export(gampoi_test_qlr)
 export(glm_gp)
+export(overdispersion_mle)
 import(Rcpp)
 import(stats)
 importFrom(methods,as)
