@@ -4,7 +4,7 @@
 #' Internal Function to Fit a Gamma-Poisson GLM
 #'
 #' @inheritParams glm_gp
-#' @inheritParams gampoi_overdispersion_mle
+#' @inheritParams overdispersion_mle
 #' @param Y any matrix-like object (e.g. `matrix()`, `DelayedArray()`, `HDF5Matrix()`) with
 #'   one column per sample and row per gene.
 #'
@@ -16,7 +16,7 @@
 #'  * `size_factors` a vector with the size factor for each
 #'    sample
 #'
-#' @seealso [glm_gp()] and [gampoi_overdispersion_mle()]
+#' @seealso [glm_gp()] and [overdispersion_mle()]
 #' @keywords internal
 glm_gp_impl <- function(Y, model_matrix,
                         offset = 0,
