@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/overdispersion.R
-\name{gampoi_overdispersion_mle}
-\alias{gampoi_overdispersion_mle}
+\name{overdispersion_mle}
+\alias{overdispersion_mle}
 \title{Estimate the Overdispersion for a Vector of Counts}
 \usage{
-gampoi_overdispersion_mle(
+overdispersion_mle(
   y,
   mean = base::mean(y),
   model_matrix = matrix(1, nrow = length(y), ncol = 1),
@@ -71,24 +71,24 @@ additional maintenance burden.
  # true overdispersion = 2.4
  y <- rnbinom(n = 10, mu = 3, size = 1/2.4)
  # estimate = 1.7
- gampoi_overdispersion_mle(y)
+ overdispersion_mle(y)
 
 
  # true overdispersion = 0
  y <- rpois(n = 10, lambda = 3)
  # estimate = 0
- gampoi_overdispersion_mle(y)
+ overdispersion_mle(y)
  # with different mu, overdispersion estimate changes
- gampoi_overdispersion_mle(y, mean = 15)
+ overdispersion_mle(y, mean = 15)
  # Cox-Reid adjustment changes the result
- gampoi_overdispersion_mle(y, mean = 15, do_cox_reid_adjustment = FALSE)
+ overdispersion_mle(y, mean = 15, do_cox_reid_adjustment = FALSE)
 
 
  # Many very small counts, true overdispersion = 50
  y <- rnbinom(n = 1000, mu = 0.01, size = 1/50)
  summary(y)
  # estimate = 31
- gampoi_overdispersion_mle(y)
+ overdispersion_mle(y)
 
 }
 \seealso{
